--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   --icon-bg-color: #f5f4fa;
   --icon-fill-color: #afb1b8;
   --footer-icon-bg-color: rgba(255, 255, 255, 0.1);
+  --modal-bg-overlay-color: rgba(0, 0, 0, 0.2);
 
   --border-header-color: #ececec;
   --card-border-color: #eeeeee;
@@ -36,6 +37,8 @@ body {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.03em;
+
+  /* padding-top: 80px; */
 
   background-color: var(--primery-bg-color);
   color: var(--primery-text-color);
@@ -68,6 +71,13 @@ img {
 /* шапка */
 .page-header {
   border-bottom: 1px solid var(--border-header-color);
+
+  /* min-height: 80px;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; */
 }
 
 .container.header {
@@ -571,10 +581,6 @@ img {
   flex-wrap: wrap;
 }
 
-.projects .link {
-  text-decoration: none;
-}
-
 .project {
   box-sizing: border-box;
 
@@ -589,6 +595,34 @@ img {
 
 .project:not(:nth-last-child(-n + 3)) {
   margin-bottom: var(--card-gap);
+}
+
+/* .project-thumb {
+  position: relative;
+}
+
+.project-thumb::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+}
+
+.project-thumb:hover::before {
+  opacity: 1;
+} */
+
+.projects .link {
+  display: block;
+
+  text-decoration: none;
 }
 
 .projects .link:hover,
@@ -624,4 +658,50 @@ img {
   line-height: 1.9;
 
   color: var(--title-text-color);
+}
+
+/* модальное окно */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: var(--modal-bg-overlay-color);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: var(--primery-bg-color);
+}
+
+.close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: var(--primery-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.close-icon {
+  outline: 2px solid teal;
 }
